--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hvtienprotv84.github.io/ReactJS_TailwindCSS_PuzzleGame",
   "name": "15-puzzle-game",
   "private": true,
   "version": "0.0.0",
